final-thesis.pdf did not have graphviz diagrams
Replace call to dot file generation with import of PNG images.

--- a/system/swissrangercam.tex
+++ b/system/swissrangercam.tex
@@ -90,7 +90,8 @@ classes are related to each other.
 
 \begin{figure}[t]
 \begin{center}
-\input{system/img/swissrangercam_moduledependency}
+\includegraphics[width = 15cm]{SwissRangerCam.png}
+%\input{system/img/swissrangercam_moduledependency}
 \caption[\SwissRangerCam{}'s module dependency diagram]{\SwissRangerCam{} module dependency 
 diagram. Arcs with white arrows represent subtype relations (A $\vartriangleright$ B = A extends B) while 
 arcs with black arrows represent implementation relations (A $\blacktriangleright$ B = A uses B). Gray 
