--- a/depthcolor/depthcolor.tex
+++ b/depthcolor/depthcolor.tex
@@ -35,7 +35,8 @@ illustrates how they are related to the components of the vision system.
 
 \begin{figure}[t]
 \begin{center}
-\input{depthcolor/img/depthcolorcam_moduledependency}
+\includegraphics[width = 15cm]{DepthColorCam.png}
+%\input{depthcolor/img/depthcolorcam_moduledependency}
 \caption[\DepthColorCam{}'s module dependency diagram]{\DepthColorCam{} module dependency diagram. 
 Arcs with white arrows represent subtype relations (A $\vartriangleright$ B = A extends B) while arcs with 
 black arrows represent implementation relations (A $\blacktriangleright$ B = A uses B). Gray rectangles 
