--- a/system/colorcam.tex
+++ b/system/colorcam.tex
@@ -62,7 +62,8 @@ are related to each other.
 
 \begin{figure}[t]
 \begin{center}
-\input{system/img/colorcam_moduledependency}
+\includegraphics[width = 15cm]{ColorCam.png}
+%\input{system/img/colorcam_moduledependency}
 \caption[\ColorCam{}'s module dependency diagram]{\ColorCam{} module dependency diagram. Arcs with 
 white arrows represent subtype relations (A $\vartriangleright$ B = A extends B) while arcs with black arrows 
 represent implementation relations (A $\blacktriangleright$ B = A uses B). Gray rectangles represent abstract 
